appId: org.reactjs.native.example.Project
---
- launchApp
- assertVisible: '0'

- tapOn:
    text: '+'
    waitToSettleTimeoutMs: 0
- assertVisible: 'loading'
- assertVisible: '1'

- stopApp
- launchApp
- assertVisible: '1'

- tapOn:
    text: '-'
    waitToSettleTimeoutMs: 0
- assertVisible: 'loading'
- assertVisible: '0'

- stopApp
- launchApp
- assertVisible: '0'
